[build-system]
requires = ["setuptools", "numpy", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "infinigen"
readme = "README.md"
license = {text = "BSD-3-Clause"}
dynamic = ["version"]

description = "Infinite Photorealistic Worlds using Procedural Generation"
keywords = [
    "computer vision",
    "data generation",
    "procedural"
]
classifiers = [
    "Programming Language :: Python :: 3",
]

requires-python = "==3.11.*"
dependencies = [
    # NOTE: many less-than dependencies could likely be loosened
    #   we attempted to restrict to only versions that are known to be working
    "bpy==4.2.0",
    "procfunc>=0.34,<0.35",
    "imageio<2.32.0", # e.g. 2.31.1
    "matplotlib",
    "numpy<2",
    "opencv-python<4.9.0", # e.g. 4.8.0.74
    "pandas",
    "scipy", # trimesh collision path
    "trimesh<3.23.0",
    "OpenEXR",
    "pillow>=11.3.0",
    # used by trimesh, we could specify "trimesh[easy]" but this brings more packages
    "python-fcl",
    "rtree", # trimesh spatial index
    "cvdpack>=0.5.2", # v2 ground-truth tool
]

[project.optional-dependencies]
terrain = [
    "infinigen[infinigen1]", # terrain is a v1 feature
    "landlab==2.6.0",
    "pyrender<0.2.0",
    # landlab needs pkg_resources, removed in setuptools>=81
    "setuptools<81"
]
vis = [
    "einops",
    "numba", # for ground truth visuals
    "pyglet<2" # for trimesh_scene.show()
]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-timeout",
    "ruff==0.14.5", # NOTE! must also update checks.yml and pre-commit-config.yaml
    "ty",
    "tabulate",
    "rapidfuzz",
    "sphinx",
    "myst-parser",
    "sphinx_book_theme",
    "sphinx-argparse",
    "flask",
    "jinja2",
]
sim = [
    "infinigen[infinigen1]", # sim exporters live in v1
    "mujoco",
    "usd-core",
]
wandb = [
    "wandb"
]
# Legacy 1.0 gen; not "v1" ("v1" is a PEP 440 version, breaks pip<25 extra markers)
infinigen1 = [
    "infinigen[vis]", # einops, numba, pyglet
    "scikit-image<0.20.0",
    "geomdl",
    # deps used only by v1 (moved out of core to keep v2 lean)
    "gin_config>=0.5.0",
    "coacd",
    "networkx",
    "psutil",
    "scikit-learn<1.4.0",
    "shapely<=2.0.5",
    "tqdm",
    "submitit", # v1 datagen SLURM
]

[project.scripts]
infinigen = "infinigen2.generate:main"
infinigen2 = "infinigen2.generate:main"

[tool.setuptools.dynamic]
version = {attr = "infinigen2.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]

"*" = ["*.gin", "*.txt", "*.json"]

# Must be specified as paths relative to infinigen/
"infinigen" = [
    "terrain/**/*.soil", # extra files for SoilMachine
    "terrain/lib/**/*.so", # created by terrain compilation
    "terrain/lib/**/*.o", # created by terrain compilation
    "datagen/customgt/build/customgt", # created during opengl compilation
    "assets/objects/creatures/parts/nurbs_data/*.npy", # stores creature nurbs centroids data, ideally will be deprecated
]

[tool.pytest.ini_options]
testpaths = "tests"
junit_family = "xunit2"
markers = ["skip_for_ci", "render_gpu", "slow"]
timeout = 480

filterwarnings = [

    "ignore:The value of the smallest subnormal for <class 'numpy.float:UserWarning",

    # ignore warnings from landlab, not our problem
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
    "ignore:Importing from numpy.matlib is deprecated since 1.19.0:PendingDeprecationWarning",
    "ignore:Please import `label` from the `scipy.ndimage` namespace; the `scipy.ndimage.measurements` namespace is deprecated and will be removed in SciPy 2.0.0:DeprecationWarning"

]

[tool.cibuildwheel]
test-extras = ["dev"]
test-command = "pytest tests"

[tool.ruff]
target-version = "py310"

exclude = [
    "src/infinigen/infinigen_gpl/",
    "src/infinigen/OcMesher/",
    "src/infinigen/datagen/customgt/dependencies/",
    "src/infinigen/terrain/mesh_to_sdf",
    "src/infinigen/terrain/mesher/_marching_cubes_lewiner*",
    "*.ipynb",
]

[tool.ruff.lint]

select = [
    "E",
    "I",
    "F", 
    "S102", # no exec(),
    "TID251", # custom banned imports
    "TID252", # relative imports only allowed for siblings

]
ignore = [
    "E501", # over-length lines, formatter should handle it
    "E741", # ambigous variable name
    "F841", # local variable is assigned to but never used
    "B905" # disable "zip must have strict parameter"
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401",
    "CPY001", # runs during PRs, but no need for copyright on boilerplate/often-empty __init__.py
]
"src/infinigen/assets/*" = ["F841"] #transpiler currently creates lots of unused variables

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"

[tool.ty.src]
include = [
    "src/infinigen2", 
    "tests/infinigen2",
]

[dependency-groups]
dev = [
    "wandb>=0.21.0",
]
